--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-language: bash
+language: node_js
+node_js:
+  - "8"
 sudo: required
 services:
   - docker
@@ -11,6 +13,7 @@ env:
     - DOCKER_MACHINE_NAME="project1"
 
 script:
+  - npm test
   - docker-compose build
 
 deploy:
