--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "17-356 Dronuts Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/CMU-17-356/dronuts-2019-group-5#readme",
   "dependencies": {
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "jest": "^24.0.0",
+    "supertest": "^3.4.2"
   }
 }
