--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
   - "8"
-dist: xenial  
+dist: xenial
 sudo: required
 services:
   - docker
@@ -9,9 +9,9 @@ services:
 env:
   global:
     - DOCKER_TLS_VERIFY="1"
-    - DOCKER_HOST="tcp://<AZURE_VM_IP>:2376"
+    - DOCKER_HOST="tcp://40.78.84.106:2376"
     - DOCKER_CERT_PATH="$TRAVIS_BUILD_DIR/azure"
-    - DOCKER_MACHINE_NAME="project1"
+    - DOCKER_MACHINE_NAME="dronuts-2019-group-5"
 
 script:
   - npm test
