First try with azure stuff

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ services:
 env:
   global:
     - DOCKER_TLS_VERIFY="1"
-    - DOCKER_HOST="tcp://<AZURE_VM_IP>:2376"
+    - DOCKER_HOST="tcp://104.42.59.129:2376"
     - DOCKER_CERT_PATH="$TRAVIS_BUILD_DIR/azure"
-    - DOCKER_MACHINE_NAME="project1"
+    - DOCKER_MACHINE_NAME="group-5-sean"
 
 script:
   - npm test
