--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node server.js"
+    "start": "node dist/server.js",
+    "build": "npm run build-ts && npm run tslint",
+    "build-ts": "tsc",
+    "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -21,7 +24,13 @@
     "express": "^4.16.4"
   },
   "devDependencies": {
-    "jest": "^24.0.0",
-    "supertest": "^3.4.2"
+    "@types/express": "^4.16.1",
+    "@types/jest": "^23.3.13",
+    "@types/supertest": "^2.0.7",
+    "jest": "^23.3.13",
+    "supertest": "^3.4.2",
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.12.1",
+    "typescript": "^3.2.4"
   }
 }
