--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
     "@types/express": "^4.16.1",
     "@types/jest": "^23.3.13",
     "@types/supertest": "^2.0.7",
-    "jest": "^24.0.0",
+    "jest": "^23.3.13",
     "supertest": "^3.4.2",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "typescript": "^3.2.4"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "jest"
+    ]
   }
 }
