--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node dist/server.js",
     "build": "npm run build-ts && npm run tslint",
     "build-ts": "tsc",
-    "tslint": "tslint -c tslint.json -p tsconfig.json"
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "watch-node": "nodemon dist/server.js",
+    "watch-ts": "tsc -w",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\""
   },
   "repository": {
     "type": "git",
@@ -27,7 +30,9 @@
     "@types/express": "^4.16.1",
     "@types/jest": "^23.3.13",
     "@types/supertest": "^2.0.7",
+    "concurrently": "^4.1.0",
     "jest": "^23.3.13",
+    "nodemon": "^1.18.9",
     "supertest": "^3.4.2",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
