--- a/package.json
+++ b/package.json
@@ -1,46 +1,37 @@
 {
   "name": "dronuts-2019-group-5",
-  "version": "0.0.1",
-  "description": "17-356 Dronuts Project",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "start": "node dist/server.js",
-    "build": "npm run build-ts && npm run tslint",
-    "build-ts": "tsc",
-    "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "watch-node": "nodemon dist/server.js",
-    "watch-ts": "tsc -w",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CMU-17-356/dronuts-2019-group-5.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/CMU-17-356/dronuts-2019-group-5/issues"
-  },
-  "homepage": "https://github.com/CMU-17-356/dronuts-2019-group-5#readme",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "express": "^4.16.4"
+    "@types/jest": "24.0.0",
+    "@types/node": "10.12.23",
+    "@types/react": "16.8.2",
+    "@types/react-dom": "16.8.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "react-scripts": "2.1.3",
+    "typescript": "3.3.3"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "devDependencies": {
-    "@types/express": "^4.16.1",
-    "@types/jest": "^23.3.13",
-    "@types/supertest": "^2.0.7",
-    "concurrently": "^4.1.0",
-    "jest": "^23.3.13",
-    "nodemon": "^1.18.9",
-    "supertest": "^3.4.2",
-    "ts-jest": "^23.10.5",
-    "tslint": "^5.12.1",
-    "typescript": "^3.2.4"
-  },
-  "greenkeeper": {
-    "ignore": [
-      "jest"
-    ]
+    "@types/enzyme": "^3.1.17",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.9.1",
+    "react-test-renderer": "^16.8.1"
   }
 }
