--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
+    "react-dev-utils": "^7.0.1",
     "react-test-renderer": "^16.8.1"
   }
 }
